Prevent overscroll on mobile, common mobile style improvements

--- a/src/components/player/player.css
+++ b/src/components/player/player.css
@@ -8,6 +8,7 @@
   min-height: 100dvh;
   overflow: hidden;
   scroll-snap-align: start;
+  scroll-snap-stop: always;
   position: relative;
   display: flex;
   align-items: center;
